// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionsContainer should render PositionsContainer correctly when a position is NOT selected 1`] = `
<div
  className="inbox_container"
>
  <div
    className="inbox_widget"
  >
    <div
      className="inbox_list"
    >
      <Connect(PositionsListFilter) />
      <PositionsList
        positions={
          Array [
            Object {
              "content": Object {
                "description": "first description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "first job id",
              "location": "first location",
              "positionId": "firstPositionId",
              "title": "first title",
            },
            Object {
              "content": Object {
                "description": "second description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "second job id",
              "location": "second location",
              "positionId": "secondPositionId",
              "title": "second title",
            },
          ]
        }
      />
    </div>
    <Connect(PositionDetails) />
  </div>
</div>
`;

exports[`PositionsContainer should render PositionsContainer correctly when a position is selected 1`] = `
<div
  className="inbox_container"
>
  <div
    className="inbox_widget"
  >
    <div
      className="inbox_list"
    >
      <Connect(PositionsListFilter) />
      <PositionsList
        positions={
          Array [
            Object {
              "content": Object {
                "description": "first description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "first job id",
              "location": "first location",
              "positionId": "firstPositionId",
              "title": "first title",
            },
            Object {
              "content": Object {
                "description": "second description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "second job id",
              "location": "second location",
              "positionId": "secondPositionId",
              "title": "second title",
            },
          ]
        }
      />
    </div>
    <Connect(PositionDetails) />
  </div>
</div>
`;

exports[`PositionsContainer should render PositionsContainer correctly when text filter is applied 1`] = `
<div
  className="inbox_container"
>
  <div
    className="inbox_widget"
  >
    <div
      className="inbox_list"
    >
      <Connect(PositionsListFilter) />
      <PositionsList
        positions={
          Array [
            Object {
              "content": Object {
                "description": "first description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "first job id",
              "location": "first location",
              "positionId": "firstPositionId",
              "title": "first title",
            },
          ]
        }
      />
    </div>
    <Connect(PositionDetails) />
  </div>
</div>
`;
